--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/logo.ico" type="image/x-icon">
     <style>
 *{margin: 0; padding: 0; box-sizing:border-box;}
 body {background-color: #303030; text-align: center;}
