--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@ body {background-color: #303030; text-align: center;}
 }
         
     </style>
-    <title>Código QR</title>
+    <title>QR Code</title>
 </head>
 <body class="qr">
     
     <input type="text" id="texto" placeholder="Ingrese Texto...">
-    <button id="generar">Crear</button>
+    <button id="generar">QR</button>
     <div id="codigoQR"></div>
 
     <script>
