--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {background-color: #303030; text-align: center;}
     <title>QR Code</title>
 </head>
 <body class="qr">
-    
+    <h1>Dame tu oro judio</h1>
     <input type="text" id="texto" placeholder="Ingrese Texto...">
     <button id="generar">QR</button>
     <div id="codigoQR"></div>
