--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="img/logo.ico" type="image/x-icon">
     <style>
 *{margin: 0; padding: 0; box-sizing:border-box;}
-body {background-color: #303030; text-align: center;}
+body {background-color: #303030; text-align: center; padding: 0 1cm;}
 
 #codigoQR {
     width: 380px; margin: 20px auto; overflow:hidden;
@@ -33,7 +33,7 @@ body {background-color: #303030; text-align: center;}
     font-size: 18px;
     border: 2px solid black;
     border-radius: 20px;
-    width:90%;
+    width:100%;
     margin: 10px 0; padding:12px;
     text-align: center;
 }
