--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 body {background-color: #303030; text-align: center; padding: 0 0.7cm;}
 
 #codigoQR {
-    width: 320px; margin: 20px auto; overflow:hidden;
+    margin: 20px auto; overflow:hidden;
+}
+
+#codigoQR img {
+    border:2px solid white;
+    border-radius: 20px;
+    margin:0 auto;
 }
 
 #generar {
@@ -61,8 +67,8 @@ body {background-color: #303030; text-align: center; padding: 0 0.7cm;}
                 // Crea un nuevo elemento para el código QR
                 const qrCode = new QRCode(codigoQRDiv, {
                     text: texto,
-                    width: 320,
-                    height: 320,
+                    width: 350,
+                    height: 350,
                 });
             } else {
                 alert('Por favor, ingrese un texto.');
