--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ body {background-color: #303030; text-align: center; padding: 0 0.7cm;}
     border:2px solid white;
     border-radius: 20px;
     margin:0 auto;
+    max-width: 100%;
 }
 
 #generar {
@@ -62,13 +63,13 @@ body {background-color: #303030; text-align: center; padding: 0 0.7cm;}
             
             if (texto) {
                 // Elimina el código QR anterior, si existe
-                codigoQRDiv.innerHTML = '';
+                codigoQRDiv.innerHTML = ''; 
                 
                 // Crea un nuevo elemento para el código QR
                 const qrCode = new QRCode(codigoQRDiv, {
                     text: texto,
-                    width: 350,
-                    height: 350,
+                    width: 400,
+                    height: 400,
                 });
             } else {
                 alert('Por favor, ingrese un texto.');
