--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@ body {background-color: #303030; text-align: center; padding: 0 0.7cm;}
 
 #codigoQR {
     margin: 20px auto; overflow:hidden;
+    border:0.1cm solid white;
 }
 
 #codigoQR img {
     border:0.1cm solid white;
+    border-radius: 0.5cm;
     margin:0 auto;
     max-width: 100%;
 }
