--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {background-color: #303030; text-align: center; padding: 0 0.7cm;}
 <body class="qr">
     <input type="text" id="texto" placeholder="Ingrese Texto...">
     <button id="generar">QR</button>
-    <div id="codigoQR"></div>
+    <div id="codigoQR"><img src="img/img.jpg"></div>
 
     <script>
         const generarBtn = document.getElementById('generar');
